skip string preprocessing